[package]
name = "passivednsrust"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "1.1"
etherparse = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam-channel = "0.5"
dashmap = "5.5"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dns-parser = "0.8"
ctrlc = "3.4"

[profile.release]
strip = true      # Automatically strip symbols from the binary (Reduces size by ~30-50%)
lto = true        # Link Time Optimization (Makes code faster, builds slightly slower)
codegen-units = 1 # Maximizes optimization opportunities (slower build, faster binary)
panic = "abort"   # Removes stack unwinding logic (Smaller binary, simple crash on panic)
